--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tartan-api-server",
+  "name": "tartan-api-dashboard",
   "version": "1.0.0",
-  "description": "API to validate Aadhaar, PAN and bank using Tartan",
+  "description": "Tartan validation API with dashboard",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.6.12"
   }
