--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-TARTAN_CLIENT_ID=your_client_id
-TARTAN_CLIENT_SECRET=your_client_secret
+PORT=3000
+DATABASE_URL=your_database_url
+API_KEY=your_api_key
