--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "Tartan validation API with dashboard",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+"scripts": {
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "test": "jest"
+},
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
